--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -15,3 +15,8 @@ slorber:
   title: Docusaurus maintainer
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
+
+zhenghua:
+  name: 郑华
+  url: https://github.com/zhenghua75
+  image_url: https://github.com/zhenghua75.png
